found fix for half the site being white on mobile

--- a/src/app.scss
+++ b/src/app.scss
@@ -6,6 +6,11 @@
 @tailwind components;
 @tailwind utilities;
 
+html,
+body {
+    overflow-x: hidden;
+}
+
 :root {
     @apply bg-neutral-100;
 
